# service-orchestrator

./: Cargo.toml  README.md  startmocks.ps1
src/: .rs  dog_service.yaml  main.rs  service_config.yaml  workflow_mapping.yaml  workflow_request_definition.rs  workflow_response_definition.rs  workflow_spec.yaml
src/service_specs/: cow_service.yaml  dog_service.yaml  meat_service.yaml  oven_service.yaml
src/workflow_response_definition/: workflow_response.rs
src/workflow_specs/: cat_api_spec.yaml  rat_api_spec.yaml  workflows_spec.yaml
