[package]
name = "service_orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
oas3 = { git = "https://github.com/x52dev/oas3-rs.git", rev = "a6b4c0bb25ef2b3d7a5364858673f82d70a0f0f5" }
codegen = "0.1"

http = "0.2.9"

[[bin]]
name = "generate_code"
