[package]
name = "service_orchestrator"
version = "0.1.0"
edition = "2021"
default-run = "service_orchestrator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
oas3 = "0.4"
codegen = "0.1"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio-stream = "0.1"
url = "2.4"

http = "0.2.9"

[[bin]]
name = "generate_code"
